# platform

./: .gitignore  bun.lockb  jest.config.cjs  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
assets/: config.json
assets/wasm/: router.wasm  staking_strategy.wasm
contracts/router/: Cargo.toml
contracts/router/artifacts/: checksums.txt  checksums_intermediate.txt  router.wasm
contracts/strategies/staking/: .gitignore  Cargo.toml
contracts/strategies/staking/artifacts/: checksums.txt  checksums_intermediate.txt  secret_contract_example.wasm  staking_strategy.wasm
contracts/strategies/staking/src/: attributes.rs  contract.rs  execute.rs  investments.rs  lib.rs  msg.rs  query.rs  state.rs  test.rs
integration_tests/: README.md  accounts.ts  bun.lockb  index.test.ts  index.ts  interfaces.ts  package-lock.json  package.json  tsconfig.json  utils.ts  wallets.ts
integration_tests/assets/: config.json
scripts/: redeploy_router.sh  redeploy_staking.sh
src/: app.postcss  theme.postcss
src/assets/: config.json
src/components/: account.svelte  investmentMsg.svelte  investmentMsgs.svelte  strategies.svelte  strategy.svelte  token.svelte  tokenSelector.svelte
src/config/: demo.ts  index.ts  logos.ts
src/interfaces/: contracts.ts  enums.ts  functions.ts  investments.ts  networks.ts  state.ts  tokens.ts
src/lib/: balances.ts  client.ts  connector.ts  index.ts  state.ts  strategies.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
tests/: .gitignore  accounts.ts  config.ts  index.test.ts  interfaces.ts  router.test.ts  utils.ts
tests/strategies/: staking.test.ts
(+19 files in other folders)
